--- a/packages/frontend/src/stories/Introduction.mdx
+++ b/packages/frontend/src/stories/Introduction.mdx
@@ -1,12 +1,12 @@
 import { Meta } from "@storybook/blocks";
-import Code from "./assets/code-brackets.svg";
-import Colors from "./assets/colors.svg";
-import Comments from "./assets/comments.svg";
-import Direction from "./assets/direction.svg";
-import Flow from "./assets/flow.svg";
-import Plugin from "./assets/plugin.svg";
-import Repo from "./assets/repo.svg";
-import StackAlt from "./assets/stackalt.svg";
+import Code from "./assets/svgs/code-brackets.svg";
+import Colors from "./assets/svgs/colors.svg";
+import Comments from "./assets/svgs/comments.svg";
+import Direction from "./assets/svgs/direction.svg";
+import Flow from "./assets/svgs/flow.svg";
+import Plugin from "./assets/svgs/plugin.svg";
+import Repo from "./assets/svgs/repo.svg";
+import StackAlt from "./assets/svgs/stackalt.svg";
 
 <Meta title="Example/Introduction" />
 
